--- a/src/components/SignUpModal/style.module.css
+++ b/src/components/SignUpModal/style.module.css
@@ -6,6 +6,10 @@
 	left: 0;
 	width: 100%;
 	height: 100vh;
-	background-color: rgba(0, 0, 0, 0.35);
+	background-color: rgba(255, 255, 255, 0.801);
 	z-index: 100;
+}
+.registerAccountModal * {
+	display: block;
+	margin: 0;
 }
