--- a/src/layout/SignUpLogin/style.module.css
+++ b/src/layout/SignUpLogin/style.module.css
@@ -1,6 +1,10 @@
 .loginContainer {
 	width: 100%;
-	height: 80vh;
+	height: 60vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 }
 .signUpButton {
 	display: block;
