--- a/src/components/SignUpModal/style.module.css
+++ b/src/components/SignUpModal/style.module.css
@@ -6,7 +6,7 @@
 	left: 0;
 	width: 100%;
 	height: 100vh;
-	background-color: rgba(255, 255, 255, 0.904);
+	background-color: rgb(255, 255, 255);
 	z-index: 100;
 }
 .registerAccountModal * {
@@ -24,6 +24,7 @@
 	font-weight: 700;
 	font-size: 15px;
 
+	border: 2px solid #1d506d;
 	color: #1d506d;
 }
 .registerAccountModal input {
