--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,12 @@
 * {
 	box-sizing: border-box;
+	scroll-behavior: smooth;
 }
 body {
 	margin: 0;
+}
+#root {
+	scroll-behavior: smooth;
 }
 input [type='text'],
 [type='password'],
