--- a/src/components/CreateRoomForm/style.module.css
+++ b/src/components/CreateRoomForm/style.module.css
@@ -1,3 +1,49 @@
 .gameDisplay {
-	margin-right: 2px;
+	height: 100%;
+	padding: 30px;
+
+	display: flex;
+	flex-direction: column;
+
+	justify-content: center;
+	align-items: center;
+
+	text-align: center;
+}
+/* .gameDisplay input,
+label {
+	width: 250px;
+	height: 30px;
+	margin: 10px 0;
+} */
+.gameDisplay input[type='text'],
+input[type='number'] {
+	width: 250px;
+	height: 30px;
+
+	border-radius: 50px;
+	padding-left: 15px;
+
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 700;
+	font-size: 15px;
+
+	border: 2px solid #1d506d;
+	color: #1d506d;
+}
+
+.gameDisplay input[type='submit'] {
+	margin: 25px auto;
+	display: block;
+	border-radius: 50px;
+	border-style: none;
+
+	width: 125px;
+	height: 30px;
+
+	background: #1d506d;
+	color: white;
+
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 400;
 }
