--- a/src/pages/Lobby/style.module.css
+++ b/src/pages/Lobby/style.module.css
@@ -17,4 +17,8 @@ main {
 	grid-row: 1 / span 1;
 
 	text-align: center;
+
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 700;
+	color: #1d506d;
 }
