--- a/src/layout/RoomList/style.css
+++ b/src/layout/RoomList/style.css
@@ -2,7 +2,7 @@
 	width: 100%;
 	height: 500px;
 	background-color: #1d506d;
-	overflow: scroll;
+	overflow-y: scroll;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 700;
 }
