--- a/src/components/UpdateUsernameModal/style.module.css
+++ b/src/components/UpdateUsernameModal/style.module.css
@@ -1,4 +1,4 @@
-.deleteAccountModal {
+.updateUsernameModal {
 	display: grid;
 	place-items: center;
 	position: fixed;
@@ -19,12 +19,17 @@
 	width: 135px;
 	height: 30px;
 
-	background: red;
+	background: #1d506d;
 	color: white;
 
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
 	cursor: pointer;
+}
+
+.button[disabled] {
+	opacity: 0.5;
+	cursor: not-allowed;
 }
 
 .buttonClose {
