--- a/src/pages/Profile/style.module.css
+++ b/src/pages/Profile/style.module.css
@@ -6,18 +6,34 @@
 	color: #1d506d;
 }
 
+.avatar_container {
+	text-align: center;
+	cursor: pointer;
+}
+
+.avatar {
+	width: 150px;
+	height: 150px;
+}
+
 .button {
 	margin: 25px auto;
 	display: block;
 	border-radius: 50px;
 	border-style: none;
 
-	width: 125px;
+	width: 135px;
 	height: 30px;
 
-	background: #e61f1f;
+	background: #1d506d;
 	color: white;
 
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
+	cursor: pointer;
+}
+
+.danger {
+	background: #e61f1f;
+	color: white;
 }
