allow change password and delete to re-authenticate user

--- a/src/components/UpdatePasswordModal/style.module.css
+++ b/src/components/UpdatePasswordModal/style.module.css
@@ -45,3 +45,8 @@ input[id='profilePassword'],
 input[id='profileConfirmPassword'] {
 	float: right;
 }
+
+.errorDisplay {
+	text-align: center;
+	color: tomato;
+}
