--- a/src/components/LobbyWaitingRoom/style.module.css
+++ b/src/components/LobbyWaitingRoom/style.module.css
@@ -8,6 +8,11 @@
 	padding: 10px;
 }
 
+.button:hover {
+	cursor: pointer;
+	background: #29678b;
+}
+
 .form {
 	display: flex;
 	flex-direction: column;
