--- a/src/components/QuizCard/style.module.css
+++ b/src/components/QuizCard/style.module.css
@@ -51,6 +51,6 @@
 	padding: 20px;
 	font-size: 32px;
 	border-radius: 50%;
-	color: #1d506d;
-	border: solid 5px #1d506d;
+	text-align: center;
+	transition: 0.3s;
 }
