--- a/src/components/Results/style.module.css
+++ b/src/components/Results/style.module.css
@@ -1,27 +1,42 @@
+.container {
+	display: grid;
+	width: 100%;
+	height: 100%;
+	grid-template-columns: 1fr 1fr;
+	column-gap: 30px;
+	justify-items: center;
+	align-items: start;
+	font-family: 'Open Sans', sans-serif;
+}
+
+.container h1 {
+	grid-column: 1 / 3;
+}
+
 .canvas {
-	border: 1px solid black;
-	width: 45%;
+	width: 100%;
 	display: inline-block;
 }
 
 .form {
+	grid-column: 1 / 3;
 	text-align: center;
-	margin-top: 1%;
-	border: 1px solid black;
+	place-self: center;
 }
 
 .leaderboard {
-	border: 1px solid black;
-	width: 45%;
+	width: 100%;
 	text-align: center;
-	display: inline-block;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 400;
-	margin-right: 5%;
 }
 
-.leaderboard thead {
-	margin-right: 15%;
+.leaderboard thead,
+.leaderboard tbody {
+	width: 100%;
+}
+
+.avatar_icon {
+	height: 50px;
+	width: 50px;
 }
 
 .button {
